--- a/src/components/ItemFilter.css
+++ b/src/components/ItemFilter.css
@@ -8,3 +8,7 @@
     margin-left: 10px;
     color: rgb(22, 22, 222);
 }
+#headings{
+    color: rgb(57, 14, 57);
+    font-family: 'Times New Roman', Times, serif;
+}
